# axum-test-app

./: .env  Cargo.toml
src/: lib.rs
src/api/: mod.rs  routes.rs
src/models/: kline.rs  kline_repo.rs  mod.rs  repos.rs
src/models/queries/: fetch_all.sql  fetch_by_symbol.sql  fetch_latest_by_symbol.sql  insert_or_update.sql
src/service/: binance_client.rs  mod.rs
src/state/: config.rs  mod.rs
src/types/: mod.rs
