[package]
name = "axum-test-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collect-data"
path = "src/bin/collect_data.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7.3", features = ["tower-log"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "uuid", "chrono"] }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.0.0", features = ["derive", "env"] }

serde = { version = "1.0.130", features = ["derive"] }

# State of the art password hashing.
argon2 = "0.5"

# axum builds on the types in Tower
tower = "0.4.11"
tower-http = { version = "0.5.0", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }

jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.8"

time = "0.3.30"

uuid = { version = "1.0", features = ["serde"] }

# Utility Crates
anyhow = "1.0.48"
async-trait = "0.1.51"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.12"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
serde_json = "1.0.115"
chrono = {version = "0.4.37", features = ["serde", "alloc", "std", "clock"]}
reqwest = {version = "0.12.2", features = ["json"]}
